# Wolfram-Guardrails

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
config/: english_policy_prompt.txt  parser_prompt.txt  parser_prompt_extended.txt  settings.yaml
cursor_handoff/: COLAB_COMPARISON_PLAN.md  CURSOR_REBUILD_PROMPT.md  LOCAL_RUNTIME_AND_CONFIG.md  PROJECT_ARCHITECTURE.md
datasets/: adversarial_prompts.jsonl  cycle6_fresh_blind_holdout_eval_prompts.jsonl  cycle6_fresh_blind_holdout_prompts.jsonl  evaluation_prompts.jsonl  finetune_test.jsonl  finetune_test_prompts.jsonl  finetune_train.jsonl  risk_examples.jsonl
docs/: phase_6b_runbook.md  policy_translation.md
eval/: comparison_runner.py  disagreement_analyzer.py  english_evaluator.py  latent_space_runner.py  metrics.py  outcomes.py  parity_validator.py  policy_trace.py  report_generator.py  wolfram_evaluator.py
examples/: compare_colab_qlora_parser.py  compare_english_vs_finetuned_wolfram.py  pull_parser_model.py  run_batch_eval.py  run_prompt.py
guardrails/: adapter.py  client.py  engine.py  policy.py  rules.wl
llm/: normalizer.py  ollama_utils.py  parser.py  repair.py  schema.py
notebooks/: colab_parser_qlora_finetune.ipynb  colab_parser_qlora_finetune_test1.ipynb  colab_qwen25_3b_qlora_parser_finetune.ipynb  colab_runtime_helpers.py  guardrail_comparison.ipynb  latent_space_disagreements.ipynb  latent_space_disagreements_output.ipynb  raw_data.ipynb
pipeline/: cli.py  decision.py  orchestrator.py  report.py
risk/: embedding_scorer.py
tests/: test_adversarial_dataset.py  test_parser.py  (+7 more)
(+14 files in other folders)
