[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wolfram-guardrails"
version = "0.1.0"
description = "Local-first LLM guardrail evaluation pipeline using Ollama and Wolfram Language rules"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "wolframclient>=1.4",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0", "numpy>=1.26"]
dev = ["pytest>=8.0", "pytest-mock>=3.14"]

[project.scripts]
wolfram-guardrails = "pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm*", "guardrails*", "pipeline*", "risk*", "utils*", "eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
